<resources>
    <string name="app_name">App_RadioButton</string>
    <string name="primer_Valor"> Primer Valor</string>
    <string name="segundo_Valor"> Segundo Valor</string>
    <string name="RB1_Sumar"> Sumar </string>
    <string name="RB2_Restar"> Restar </string>
    <string name="RB3_Multiplicar"> Multiplicar </string>
    <string name="RB4_Dividir"> Dividir </string>
    <string name="btn_Resultado"> Calcular </string>
    <string name="txt_Resultado"> Resultado </string>
</resources>