<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_Valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/primer_Valor"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_Valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/segundo_Valor"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Valor1" />

    <Button
        android:id="@+id/btn_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="1dp"
        android:onClick="Calcular"
        android:text="@string/btn_Resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.276" />

    <TextView
        android:id="@+id/txt_Resultado"
        android:layout_width="303dp"
        android:layout_height="44dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="32dp"
        android:hint="@string/txt_Resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_resultado" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="301dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_Resultado"
        app:layout_constraintTop_toBottomOf="@+id/txt_Valor2"
        app:layout_constraintVertical_bias="0.20999998"
        tools:layout_editor_absoluteX="56dp">

        <RadioButton
            android:id="@+id/radioButton_Sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB1_Sumar" />

        <RadioButton
            android:id="@+id/radioButton_Restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB2_Restar" />

        <RadioButton
            android:id="@+id/radioButton_Multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB3_Multiplicar" />

        <RadioButton
            android:id="@+id/radioButton_Division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB4_Dividir" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>